<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:clickable="true"
    android:focusable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingBottom="64dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:text="Spy games" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_genres_adult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="6dp"
                android:drawablePadding="16dp"
                android:gravity="center"
                android:textColor="@android:color/darker_gray"
                tools:drawableEnd="@drawable/ic_plus_18_movie"
                tools:text="Mystery, fantasy, drama" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="6"
                android:textColor="@android:color/white"
                tools:text="A cold and mysterious new security guard for a Los Angeles cash truck company surprises his co-workers when he unleashes precision skills during a heist. The crew is left wondering who he is and where he came from. Soon, the marksman's ultimate motive becomes clear as he takes dramatic and irrevocable steps to settle a score." />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_background"
                android:layout_width="match_parent"
                android:layout_height="250dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:drawableStart="@drawable/ic_rating"
                    android:textColor="#FFC616"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="8.7" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_release_date"
                    style="@style/TextViewDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/tv_rating"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_rating"
                    tools:text="@string/released_in" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_budget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                tools:text="@string/budget" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_duration"
                style="@style/TextViewDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/duration" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_countries"
                style="@style/TextViewDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/countries" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_orig_language"
                style="@style/TextViewDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/original_language" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_spoken_languages"
                style="@style/TextViewDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/spoken_languages" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_companies"
                style="@style/TextViewDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/companies" />

        </LinearLayout>

    </ScrollView>


    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>